# Intelligent-Robot-System

./: CMakeLists.txt  IRSFunction.cpp  ParametersManager.cpp  ROSParametersData.cpp  main.cpp  package.xml
IRSGUI/: CMakeLists.txt  InitiateUI.cpp  InitiateUI.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ROSManager/: CMakeLists.txt  MsgManager.h  NodeManager.cpp  NodeManager.h
ServoControl/: CMakeLists.txt  SCDrive.cpp  SCDrive.h  ServoCom.py  ServoID.cpp  ServoID.h  ServoInitiate.cpp  ServoInitiate.h  ServoManager.py  SetServoStatus.py
SteeringEngineControl/: CMakeLists.txt  SECDrive
include/: IRSFunction.h  ROSParametersData.h
